Fix for group subtitle resizing and wrapping with long speed language strings.

--- a/src/scss/quadrone/group.scss
+++ b/src/scss/quadrone/group.scss
@@ -29,9 +29,9 @@
     }
 
     .actor-subtitle {
-      // max-height: 1.25rem;
       min-height: 1.25rem;
       align-content: center;
+      flex-wrap: wrap;
 
       .pill {
         flex: 0 1 auto;
@@ -95,6 +95,11 @@
             border-color: var(--t5e-component-field-border-hover);
           }
         }
+      }
+
+      >span {
+        min-height: 1.25rem;
+        max-height: 1.25rem;
       }
     }
 
